# sprite_extractor

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/assets/: boss_andromeda.plist
tests/data/boss_shinkagezendo/: boss_shinkagezendo.plist
tests/data/fx_bladestorm/: deser.json  deser.plist  fx_bladestorm.plist
